# citra_translations

./: .gitmodules  .travis.yml  CMakeLists.txt
translations/: CMakeLists.txt  translations_de_de.ts  translations_en_us.ts  translations_es_es.ts  translations_fr_fr.ts  translations_ja_jp.ts
